# fastapi_secrets

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  logging.yaml  pyproject.toml  pytest.ini
app/: main.py
app/api/: __init__.py
app/api/endpoints/: secrets.py
app/config/: __init__.py
app/core/: config.py  security.py
app/database/: db_init.py
app/database/repositories/: __init__.py  secret_repository.py
app/models/exceptions/: exceptions.py
app/models/schemas/: secret.py
app/models/tables/: secret.py
app/services/: __init__.py  secret.py
app/services/exceptions/: __init__.py  exceptions.py  handlers.py
app/utils/: uow.py
docker_cmds/: app.sh
logging_settings/: logs_setup.py
migrations/: env.py
migrations/versions/: 80f216f08b36_create_secret_table.py
src/: baselogs_setup.py  main.py
src/api/: __init__.py
src/api/endpoints/: secrets.py
src/base/: __init__.py  exc_handlers.py  exceptions.py  logger.py
src/config/: __init__.py
src/database/: db_init.py
src/database/repositories/: __init__.py  base_repository.py  secret_repository.py
src/injectors/: __init__.py  pg.py  repositories.py  services.py
src/models/: __init__.py  secret.py
src/models/exceptions/: exceptions.py
src/models/schemas/: secret.py
src/models/tables/: secret.py
src/routers/: __init__.py  secrets.py
src/services/: __init__.py  secret.py  security.py
tests/: conftest.py  test_config.py  test_endpoints.py  test_repository.py  test_service.py  test_uow.py
