[project]
name = "test-project"
version = "0.1.0"
description = "Test project"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "cryptography>=44.0.2",
    "fastapi>=0.115.12",
    "granian>=2.6.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.42.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-env>=1.1.5",
    "black>=25.1.0",
    "mypy>=1.16.0",
    "ruff>=0.11.12"
]

[tool.black]
skip-string-normalization = true
line-length = 120
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 120
preview = false

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "ANN", "UP", "RUF", "RET"]
ignore = [
    "C408",
    "PLR2004",
    "RET504",
    "RUF002",
    "RUF003",
    "UP006",
    "UP007"
]

[tool.ruff.lint.isort]
combine-as-imports = false
force-single-line = true
known-first-party = ["app"]
order-by-type = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true

[tool.pytest_env]
APP_MODE = "test"
